--- a/Swoosh/Base.lproj/Main.storyboard
+++ b/Swoosh/Base.lproj/Main.storyboard
@@ -18,38 +18,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="welcomeScreenBG" translatesAutoresizingMaskIntoConstraints="NO" id="vb6-Qm-9kC">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcomeScreenBG" translatesAutoresizingMaskIntoConstraints="NO" id="vb6-Qm-9kC">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="KvF-GW-deY">
-                                <rect key="frame" x="122" y="20" width="131" height="42"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="KvF-GW-deY">
+                                <rect key="frame" x="128" y="30" width="119" height="20"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="GO  ALL  IN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qT-Fm-klt">
-                                <rect key="frame" x="47" y="135" width="282" height="69"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="50"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GO  ALL  IN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qT-Fm-klt">
+                                <rect key="frame" x="60.5" y="135" width="254" height="61.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="254" id="o9k-G5-INh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="45"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ON COMING ALL OUT " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJv-gE-lky">
-                                <rect key="frame" x="75" y="194" width="226" height="25"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="18"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Find a team in your city &amp;dominate the league" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xa-CJ-K6q">
-                                <rect key="frame" x="47" y="298" width="282" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find a team in your city &amp;dominate the league" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xa-CJ-K6q">
+                                <rect key="frame" x="60.5" y="249" width="254" height="46.5"/>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fhM-PO-Egs" customClass="BorderButton" customModule="Swoosh" customModuleProvider="target">
-                                <rect key="frame" x="16" y="615" width="343" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ON COMING ALL OUT " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJv-gE-lky">
+                                <rect key="frame" x="89" y="204.5" width="196" height="25"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="18"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fhM-PO-Egs" customClass="BorderButton" customModule="Swoosh" customModuleProvider="target">
+                                <rect key="frame" x="16" y="610" width="343" height="47"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40154093174846628" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="25"/>
                                 <state key="normal" title="GET START">
@@ -58,6 +55,25 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="8xa-CJ-K6q" firstAttribute="width" secondItem="1qT-Fm-klt" secondAttribute="width" id="0k5-7e-P2P"/>
+                            <constraint firstItem="vb6-Qm-9kC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8Z9-HW-fPl"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fhM-PO-Egs" secondAttribute="bottom" constant="10" id="8bt-QG-oqi"/>
+                            <constraint firstItem="KvF-GW-deY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DPJ-K9-G5W"/>
+                            <constraint firstItem="vb6-Qm-9kC" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="MuY-f6-6qt"/>
+                            <constraint firstItem="KvF-GW-deY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="Od9-px-Qti"/>
+                            <constraint firstItem="fhM-PO-Egs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="SQW-uX-7Du"/>
+                            <constraint firstItem="MJv-gE-lky" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Sod-EB-qIv"/>
+                            <constraint firstItem="MJv-gE-lky" firstAttribute="top" secondItem="1qT-Fm-klt" secondAttribute="bottom" constant="8" id="TJ6-wb-AGD"/>
+                            <constraint firstItem="1qT-Fm-klt" firstAttribute="top" secondItem="KvF-GW-deY" secondAttribute="bottom" constant="85" id="Wt8-Vs-zlB"/>
+                            <constraint firstItem="fhM-PO-Egs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="c4U-rD-idN"/>
+                            <constraint firstItem="1qT-Fm-klt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hCV-Bu-EJA"/>
+                            <constraint firstItem="8xa-CJ-K6q" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hiX-aa-ePr"/>
+                            <constraint firstItem="vb6-Qm-9kC" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="qtb-Qk-Zdv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fhM-PO-Egs" secondAttribute="trailing" constant="16" id="x20-0y-iVn"/>
+                            <constraint firstItem="8xa-CJ-K6q" firstAttribute="top" secondItem="1qT-Fm-klt" secondAttribute="bottom" constant="52.5" id="xE3-yQ-w4a"/>
+                            <constraint firstItem="vb6-Qm-9kC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="xyZ-iS-EjH"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
